--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@compodoc/compodoc": "^1.0.0-beta.9",
     "@ngtools/webpack": "^7.2.1",
     "@types/jest": "^23.0.0",
+    "@types/googlemaps": "^3.30.16",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
     "clang-format": "1.2.3",
